@@ -29,6 +29,24 @@ name|java
 operator|.
 name|util
 operator|.
+name|Map
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|TreeMap
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|ArrayList
 import|;
 end_import
@@ -78,25 +96,16 @@ name|int
 name|numTerms
 decl_stmt|;
 DECL|field|terms
-name|HashMap
+name|Map
 argument_list|<
 name|Term
 argument_list|,
 name|Num
 argument_list|>
 name|terms
-init|=
-operator|new
-name|HashMap
-argument_list|<
-name|Term
-argument_list|,
-name|Num
-argument_list|>
-argument_list|()
 decl_stmt|;
 DECL|field|queries
-name|HashMap
+name|Map
 argument_list|<
 name|Query
 argument_list|,
@@ -131,6 +140,58 @@ DECL|field|bytesUsed
 name|long
 name|bytesUsed
 decl_stmt|;
+DECL|field|doTermSort
+specifier|private
+specifier|final
+name|boolean
+name|doTermSort
+decl_stmt|;
+DECL|method|BufferedDeletes
+specifier|public
+name|BufferedDeletes
+parameter_list|(
+name|boolean
+name|doTermSort
+parameter_list|)
+block|{
+name|this
+operator|.
+name|doTermSort
+operator|=
+name|doTermSort
+expr_stmt|;
+if|if
+condition|(
+name|doTermSort
+condition|)
+block|{
+name|terms
+operator|=
+operator|new
+name|TreeMap
+argument_list|<
+name|Term
+argument_list|,
+name|Num
+argument_list|>
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
+name|terms
+operator|=
+operator|new
+name|HashMap
+argument_list|<
+name|Term
+argument_list|,
+name|Num
+argument_list|>
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 comment|// Number of documents a delete term applies to.
 DECL|class|Num
 specifier|final
@@ -374,7 +435,7 @@ name|mergeDocCount
 parameter_list|)
 block|{
 specifier|final
-name|HashMap
+name|Map
 argument_list|<
 name|Term
 argument_list|,
@@ -393,6 +454,25 @@ operator|>
 literal|0
 condition|)
 block|{
+if|if
+condition|(
+name|doTermSort
+condition|)
+block|{
+name|newDeleteTerms
+operator|=
+operator|new
+name|TreeMap
+argument_list|<
+name|Term
+argument_list|,
+name|Num
+argument_list|>
+argument_list|()
+expr_stmt|;
+block|}
+else|else
+block|{
 name|newDeleteTerms
 operator|=
 operator|new
@@ -404,6 +484,7 @@ name|Num
 argument_list|>
 argument_list|()
 expr_stmt|;
+block|}
 for|for
 control|(
 name|Entry
